source/objects/Intacct_Entity__c/Intacct_Entity__c.object-meta.xml
<CustomObject>
    <label>Intacct Entity</label>
    <nameField>
        <label>Intacct Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>