source/objects/Intacct_Entity__c/fields/Parent_Entity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Entity__c</fullName>
    <label>Parent Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>