source/objects/Intacct_Entity__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>