source/objects/Intacct_Entity__c/fields/State_Providence__c.field-meta.xml
<CustomField>
    <fullName>State_Providence__c</fullName>
    <label>State/Providence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>